[gd_scene load_steps=11 format=3 uid="uid://dc480so82crme"]

[ext_resource type="Script" path="res://Scene/Script/MenuPrincipale.gd" id="1_xw8yq"]
[ext_resource type="PackedScene" uid="uid://tki2apulyx4e" path="res://Joueur/joueur.tscn" id="2_am34g"]
[ext_resource type="Texture2D" uid="uid://c66pw83h81o6i" path="res://image/pocadeau_white_computeur_front_view_in_a_dark_room_with_red_cab_a52e69c9-fc39-433a-8466-72ca625ab17b.jpg" id="2_v7x8v"]
[ext_resource type="FontFile" uid="uid://dk537wexvu7ax" path="res://UI/SFPixelate.ttf" id="3_mmos3"]
[ext_resource type="Texture2D" uid="uid://c0xddrsitvptu" path="res://UI/image/407.png" id="4_ms8mv"]
[ext_resource type="Texture2D" uid="uid://cp7w1jgvc71go" path="res://UI/IconeParametre.png" id="5_65a1a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgprr"]

[sub_resource type="LabelSettings" id="LabelSettings_wd22h"]
font = ExtResource("3_mmos3")
font_size = 60
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mydqh"]
font = ExtResource("3_mmos3")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_astsn"]
font = ExtResource("3_mmos3")
font_size = 30

[node name="MenuPrincipale" type="Node2D"]
script = ExtResource("1_xw8yq")

[node name="murJoueur" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="murJoueur"]
position = Vector2(199, 262)
shape = SubResource("RectangleShape2D_fgprr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="murJoueur"]
position = Vector2(268, 262)
shape = SubResource("RectangleShape2D_fgprr")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="murJoueur"]
position = Vector2(237, 225)
shape = SubResource("RectangleShape2D_fgprr")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="murJoueur"]
position = Vector2(235, 294)
shape = SubResource("RectangleShape2D_fgprr")

[node name="Joueur" parent="." instance=ExtResource("2_am34g")]
position = Vector2(235, 213)

[node name="arrièreplan" type="Sprite2D" parent="."]
position = Vector2(563, 322)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_v7x8v")

[node name="Titre" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 463.0
offset_top = 46.0
offset_right = 679.0
offset_bottom = 104.0
grow_horizontal = 2
text = "TI-RPG
"
label_settings = SubResource("LabelSettings_wd22h")

[node name="Jouer" type="Button" parent="."]
texture_filter = 1
offset_left = 461.0
offset_top = 510.0
offset_right = 669.0
offset_bottom = 618.0
icon = ExtResource("4_ms8mv")
flat = true

[node name="Paramètres" type="Button" parent="."]
texture_filter = 1
offset_left = 817.0
offset_top = 510.0
offset_right = 1025.0
offset_bottom = 618.0
icon = ExtResource("4_ms8mv")

[node name="Label" type="Label" parent="."]
offset_left = 497.0
offset_top = 544.0
offset_right = 633.0
offset_bottom = 584.0
text = "Jouer"
label_settings = SubResource("LabelSettings_mydqh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Label2" type="Label" parent="."]
offset_left = 858.0
offset_top = 532.0
offset_right = 987.0
offset_bottom = 562.0
text = "Options
"
label_settings = SubResource("LabelSettings_astsn")

[node name="IconeParametre" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(920, 577)
scale = Vector2(2, 2)
texture = ExtResource("5_65a1a")

[node name="ChargementIcon" type="Node2D" parent="."]
visible = false

[node name="icon" type="Sprite2D" parent="ChargementIcon"]
texture_filter = 1
position = Vector2(567, 251)
texture = ExtResource("4_ms8mv")

[node name="chargement" type="Label" parent="ChargementIcon"]
offset_left = 485.0
offset_top = 238.0
offset_right = 652.0
offset_bottom = 290.0
text = "Chargementen cours."

[connection signal="pressed" from="Jouer" to="." method="_on_jouer_pressed"]
[connection signal="pressed" from="Paramètres" to="." method="_on_paramètres_pressed"]
